mobile için responsive

--- a/src/Components/ScaleData/ScaleData.css
+++ b/src/Components/ScaleData/ScaleData.css
@@ -5,3 +5,9 @@
     color:#2d5216;
     padding: 15px;
 }
+@media only screen and (max-width: 600px) {
+    .ScaleData{
+        font-size: 24px;
+    }
+  
+}
