--- a/src/Components/RfIdData/RfIdData.css
+++ b/src/Components/RfIdData/RfIdData.css
@@ -5,3 +5,10 @@
     color:#f58800;
     padding: 15px;
 }
+
+@media only screen and (max-width: 600px) {
+    .RfIdData{
+        font-size: 24px;
+    }
+  
+}
